# audiobook-forge

./: .gitignore  Cargo.toml  README.md
docs/plans/: 2026-01-06-watcher-daemon-design.md
src/audio/: chapter_import.rs  mod.rs
src/cli/: commands.rs  handlers.rs
src/core/: scanner.rs
